Update db relationship and field type (#18)
* fix: build error and redundant command

* feat: update database relation

* fix review

---------
