# internal/models/channel.go
@@ -6,11 +6,18 @@ import (
 	"gorm.io/gorm"
 )
 
+// Channel type constants
+const (
+	ChannelTypeDirect  = "direct"
+	ChannelTypeChannel = "channel"
+)
+
 // Channel represents a channel within a category
 type Channel struct {
 	gorm.Model
 	Name    string `gorm:"not null" json:"name"`
-	OwnerID uint   `gorm:"not null;type:uint" json:"ownerId"` // userid
+	OwnerID uint   `gorm:"not null;type:uint" json:"ownerId"`                                         // userid
+	Type    string `gorm:"not null;type:varchar(20);check:type IN ('direct', 'channel')" json:"type"` // Use consts
 
 	Members []*User `gorm:"many2many:channel_members" json:"members"`
 }
@@ -25,12 +32,13 @@ type ChannelResponse struct {
 	Name      string    `json:"name"`
 	Type      string    `json:"type"`
 	CreatedAt time.Time `json:"createdAt"`
+	OwnerID   uint      `json:"ownerId"`
+	Members   []User    `json:"members"` // List of members in the channel
 }
 
 type ChannelListResponse struct {
-	ID        uint      `json:"id"`
-	Name      string    `json:"name"`
-	OwnerID   uint      `json:"ownerId"`
-	CreatedAt time.Time `json:"createdAt"`
-	UpdatedAt time.Time `json:"updatedAt"`
+	ID      uint   `json:"id"`
+	Name    string `json:"name"`
+	Type    string `json:"type"`
+	OwnerID uint   `json:"ownerId"`
 }
